<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="420dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:weightSum="6"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:hint="@string/name_a"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:focusable="true"
                />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/score_zero"
                android:textColor="#000000"
                android:textSize="56sp" >
            </TextView>

            <Button
                android:id="@+id/addThreeForTeamA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_margin="4dp"
                android:text="@string/points3"
                />
            <Button
                android:id="@+id/addTwoForTeamA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="4dp"
                android:text="@string/points2"
                />
            <Button
                android:id="@+id/addOneForTeamA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/free_throw"
                />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="420dp"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:weightSum="6"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:hint="@string/name_b"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/score_zero"
                android:textColor="#FFFFFF"
                android:textSize="56sp"
                />

            <Button
                android:id="@+id/addThreeForTeamB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_margin="4dp"
                android:text="@string/points3"
                />

            <Button
                android:id="@+id/addTwoForTeamB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="4dp"
                android:text="@string/points2"
                />

            <Button
                android:id="@+id/addOneForTeamB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/free_throw"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
